# Multi_Robot_System

./: README.md  debug.txt  enable_rotors.txt
build_isolated/: catkin_make_isolated.cache
build_isolated/arm_training/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/ee_command/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hector_components_description/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hector_compressed_map_transport/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hector_gazebo/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hector_gazebo_plugins/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/hector_gazebo_thermal_camera/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/hector_gazebo_worlds/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/merge/: Makefile  (+4 more)
devel/: .catkin  .rosinstall  local_setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
docs/: control_interface.txt
src/: cmd_list.txt
src/panda/HIRO_Panda_TRAC_IK/: CMakeLists.txt
src/panda/HIRO_Panda_TRAC_IK/config/: panda_pose_controllers.yaml
src/panda/HIRO_Panda_TRAC_IK/include/panda_utils/: panda_trac_ik.h
src/panda/HIRO_Panda_TRAC_IK/include/stabilizing_control/: stabilizing_control.h
src/panda/HIRO_Panda_TRAC_IK/launch/: hiro_panda_ik_controller.launch
src/panda/HIRO_Panda_TRAC_IK/src/: panda_trac_ik_taskspace(backup).cpp  panda_trac_ik_taskspace.cpp  stabilizing_control.cpp
src/panda/HIRO_Panda_TRAC_IK/src/panda_utils/: panda_trac_ik.cpp
src/panda/panda_erg/: CMakeLists.txt  README.md
src/panda/panda_erg/bagfiles/: bag2mat.m  mat2graph.m
src/panda/panda_erg/bagfiles/EigenVsArmadillo/: fullArma75.mat  testArma10.mat  testArma100.mat  testArma50.mat  testArma75.mat  testEigen10.mat  testEigen100.mat  testEigen50.mat  testEigen75.mat
src/panda/panda_erg/bagfiles/MultipleObstacle/: test_spheres_ERG.mat  test_spheres_ERG_DSM.fig  test_spheres_ERG_jointangles.fig  test_spheres_ERG_torques.fig
src/panda/panda_erg/bagfiles/PDcontrol/: A0_jointvelocities.fig  A1_jointangles_joint2.eps  A1_jointvelocities.fig  A1_torques_joint2.eps  A4_torques_joint2.eps  A4_torques_joint7.eps  A5_torques_joint2.eps  A5_torques_joint7.eps  B19_DSM.fig  B1_jointangles_joint1.eps  B1_jointvelocities_joint1.eps  B1_torques_joint1.eps  B2_jointangles_joint1.eps  B2_jointvelocities_joint1.eps  B2_torques_joint1.eps  B3_torques_joint1.eps  B4_jointvelocities_joint1.eps  B4_torques_joint1.eps  B5_jointangles_joint1.eps  B5_jointvelocities_joint1.eps  B5_torques_joint1.eps  B6_jointvelocities_joint1.eps  B6_torques_joint1.eps  B7_jointvelocities_joint1.eps  B7_torques_joint1.eps  B8_torques_joint1.eps  B9_torques_joint1.eps  test_B0_alljoints.mat  test_B0_joint5.mat  test_B0_joint6.mat  test_B0_joint7.mat  test_B11_alljoints.mat  test_B13_alljoints.mat  test_B14_alljoints.mat  test_B15_alljoints.mat  test_B16_alljoints.mat  test_B1_alljoints.mat  test_B1_alljoints_quick.mat  test_B2_alljoints.mat  test_B3_alljoints.mat  (+6 more)
src/panda/panda_erg/bagfiles/SingleObstacle/: test_cylinder_ERG.mat  test_cylinder_ERG_DSM.fig  test_cylinder_ERG_jointangles.fig  test_cylinder_ERG_torques.fig  test_cylinder_noERG.mat  test_cylinder_noERG_DSM.fig  test_cylinder_noERG_jointangles.fig  test_cylinder_noERG_torques.fig  test_sphere_ERG.mat  test_sphere_ERG_DSM.fig  test_sphere_ERG_jointangles.fig  test_sphere_ERG_torques.fig  test_sphere_noERG.mat  test_sphere_noERG_DSM.fig  test_sphere_noERG_jointangles.fig  test_sphere_noERG_torques.fig
src/panda/panda_erg/bagfiles/TrajectoryPrediction/: Test10_q_withpred.eps  Test10_q_withpred_zoom.eps  Test10_tau_withpred.eps  Test10_tau_withpred_joint7.eps  Test11_dotq_damp1.fig  Test11_dotq_damp10.fig  Test11_dotq_damp100.fig  Test11_q_damp1.fig  Test11_q_damp10.fig  Test11_q_damp100.fig  Test5_DSM.eps  Test5_DSM.fig  Test5_q_withpred.eps  Test5_tau_withpred.eps  Test6_q_withpred.eps  Test6_tau_withpred.eps  Test7_q_withpred.eps  Test7_tau_withpred.eps  Test9_q_withpred.eps  Test9_tau_withpred.eps  test_1.mat  test_2.mat  test_3.mat  test_4.mat
src/panda/panda_erg/bagfiles/test/: Test1.mat  Test2.mat  test1_DSM.fig  test1_jointangles.fig  test1_jointtorques.fig  test2_DSM.fig  test2_jointangles.fig  test2_jointtorques.fig
src/panda/panda_erg/include/explicit_reference_governor/: explicit_reference_governor.h
src/panda/panda_erg/include/testlib/: testlib.h
src/panda/panda_erg/launch/: control_parameters.txt  erg_dsm_parameters.txt  erg_nav_parameters.txt  finger_limitsrefs.txt  obst_cylinders.txt  obst_spheres.txt  pose_refs.txt  q_limits.txt  q_refs.txt  tau_limits.txt
src/panda/panda_erg/src/: explicit_reference_governor.cpp  panda_effortcontrol_v1.cpp  panda_effortcontrol_v2.cpp  panda_trajbasedERG_potentialfields.cpp  panda_trajbasedERG_potentialfields_backup.cpp  testlib.cpp
(+1752 files in other folders)
